2008-05-16  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (activate_uri_on_screen): new, based on
	activate_uri
	(activate_uri): just call activate_uri_on_screen
	(volume_mount_cb): open the mount after having mounted it
	Fix bug #528423

==================== 2.23.2.1 ====================

==================== 2.23.2 ====================

2008-05-07  Vincent Untz  <vuntz@gnome.org>

	* panel-recent.c: (show_uri): do not only look for applications that
	can open URI; if the file is gio-native (file://), then it's fine to
	get applications that can open paths.

==================== 2.23.1 ====================

==================== 2.22.1.3 ====================

==================== 2.22.1.2 ====================

==================== 2.22.1.1 ====================

==================== 2.22.1 ====================

2008-04-04  Vincent Untz  <vuntz@gnome.org>

	* panel-applet-frame.c: (panel_applet_frame_load): plug potential leak
	(panel_applet_frame_finalize): correctly release the bonobo object.
	This fixes bug #513347, and also bug #522025 as a side-effect.
	Thanks to Michael Meeks <michael.meeks@novell.com> for the hint!

2008-03-18  Frederic Crozat  <fcrozat@mandriva.com>

	* panel-logout.c: convert username / login
	to UTF-8 if current locale is not UTF-8.

==================== 2.22.0 ====================

==================== 2.21.92 ====================

2008-02-25  Alexander Larsson  <alexl@redhat.com>

        * panel-menu-items.c:
        * panel-util.c:
	g_uri_get_scheme -> g_uri_parse_scheme

2008-02-25  Alexander Larsson  <alexl@redhat.com>

	* launcher.c (panel_launcher_delete):
	Use g_file_has_prefix instead of renamed
	g_file_contains_file.

2008-02-21  Vincent Untz  <vuntz@gnome.org>

	Make drawer work again. Fix bug #517191.

	* panel-toplevel.c: (panel_toplevel_initially_hide):
	explicitly do everything for the initial hide here. And don't hide for
	drawers.
	(panel_toplevel_realize): initially hide here